# SalaryMeow-Downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION.md  Makefile  README.md  config.example.yaml  config.py  config.yaml.example  douyin_api.py  downloader.py  main.py  project.config.json  project.private.config.json  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/workflows/: ci.yml
deploy/systemd/: app.env.example  app.service  cleanup.service  cleanup.timer  healthcheck.service  healthcheck.timer  public-access.example.conf  shared-admin.example.conf
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOY.example.md  DEPLOY.md  DEPLOYMENT.md  HANDOVER.md  REFACTOR_AUDIT.md  SECURITY.md  VERIFICATION.md
docs/archive/: SECURITY-AUDIT-REPORT.legacy.md
scripts/: check_url.py  cleanup_downloads.sh  healthcheck.sh  setup.ps1  setup.sh
src/app/: __init__.py  lifespan.py  main.py
src/app/api/: dependencies.py
src/app/api/routes/: admin.py  auth.py  download.py  health.py  pages.py  parse.py  stream.py
src/app/core/: logging.py  middleware.py  security.py  settings.py
src/app/domain/: __init__.py
src/app/infrastructure/: metadata_cache.py  rate_limit.py  safe_http.py  storage.py  url_safety.py
src/app/legacy/: __init__.py  config.py  douyin_api.py  downloader.py  utils.py
src/app/services/: auth_service.py  download_service.py  parser_service.py  preload_service.py  record_service.py  stream_service.py
src/douyin_downloader/: __init__.py  config.py  douyin_api.py  downloader.py  main.py  range_checker.py  utils.py
static/: index-v1.html  index-v2.html  index.html  index.html.bak  manifest.json
tests/: test_auth.py  test_config.py  test_urls.py  test_utils.py
tests/contract/: test_auth_contract.py  test_stream_contract.py
tests/security/: test_csp.py  test_safe_http.py  test_url_safety.py
tests/unit/: test_bilibili.py  test_douyin_api_only.py  test_download_service.py  test_lifespan.py  test_metadata_cache.py  test_preload_service.py  test_rate_limit.py  test_record_service.py  test_security.py  test_settings.py  test_stream_proxy_policy.py
web/static/: index-v1.html  index-v2.html  index.html  tailwind.generated.css
