[project]
name = "douyin-downloader-refactor"
version = "0.1.0"
description = "Refactored FastAPI media parser/downloader with production safety boundaries."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.1",
  "httpx==0.27.2",
  "PyYAML==6.0.2",
  "pydantic==2.9.2",
  "f2==0.0.1.7",
  "TikTokApi==7.3.3",
  "playwright==1.61.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["web/static", "docs/archive", "src/app/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = "src/app/legacy/.*"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "app.legacy.*"
ignore_errors = true
